--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -30,7 +30,7 @@
         <li><a href="@{Listings.trackedListings()}">Tracked Listing</a></li>
       #{/power.ck}
       #{power.ck "sellings.index"}
-        <li><a href="@{Sellings.index()}">Selling</a></li>
+        <li><a href="@{Sellings.index()}">Selling列表</a></li>
       #{/power.ck}
       #{power.ck "orders.index"}
         <li><a href="@{Orders.index()}">订单</a></li>
