--- a/core/app/views/Sellings/selling.html
+++ b/core/app/views/Sellings/selling.html
@@ -1,24 +1,38 @@
 #{extends 'main_full.html'/}
 #{set title:s.sellingId/}
-#{set 'moreScripts'}
-    #{script 'component/amazon.coffee'/}
-    #{script 'sellings/selling.coffee'/}
-#{/set}
 #{set 'moreStyles'}
     #{stylesheet 'market.css'/}
 #{/set}
+#{set 'moreScripts'}
+    #{script 'editor/kindeditor-min.js'/}
+    #{script 'editor/lang/zh_CN.js'/}
+    #{script 'component/amazon.coffee'/}
+    #{script 'sellings/selling.coffee'/}
+#{/set}
 #{if s.market.isAmazon()}
     #{flash_alert /}
+    #{info_row title:'Selling详情' /}
+<div class="row">
+  <div class="span6">
+    <strong><i class=" icon-volume-up"></i>&nbsp;&nbsp;温馨提示: &nbsp;Deploy 操作前请先进行 Sync 操作将 Amazon的数据同步到系统内.</strong>
+  </div>
+  <!--<a href="@{Listings.listing(s.listing.listingId)}">Listing : ${s.listing.listingId}</a>-->
+  <div class="6" style="text-align:right;">
+    SKU:<a href="@{Products.show()}/${s.merchantSKU.split(",")[0]}" style="text-decoration:underline;">Product: ${s.merchantSKU.split(",")[0]}</a>&nbsp;
+    &nbsp;&nbsp;
+    ASIN:<a href="${s.showListingLink()}" target="_blank" style="text-decoration:underline;">${s.asin}</a>&nbsp;&nbsp;&nbsp;
+    <a href="@{ProcureUnits.blank(s.sellingId)}" target="_blank" title="Create ProcureUnitsButton" style="text-decoration:underline;"
+       content="创建此 Selling 相关采购计划" placement='bottom' rel="popover">采购计划</a>
+  </div>
+</div>
+<br>
 <ul class="nav nav-tabs">
   <li class="active">
     <a href="#amazon" data-toggle='tab'>Amazon</a>
   </li>
-
-  <li >
-      <a href="#attach" data-toggle='tab'>附件</a>
-    </li>
-
-
+  <li>
+    <a href="#attach" data-toggle='tab'>附件</a>
+  </li>
   <li>
     <a href="#selling" data-toggle='tab' id="showFeeds">Selling</a>
   </li>
@@ -33,8 +47,8 @@
   </div>
 
   <div class="tab-pane fade" id='attach'>
-        #{include 'Sellings/_attach.html'/}
-    </div>
+      #{include 'Sellings/_attach.html'/}
+  </div>
 
   <div class="tab-pane fade" id='selling'>
     <div class="row-fluid">
@@ -47,8 +61,9 @@
           #{/form}
 
         <h4>设置参数</h4>
+
         <form class="form" id="upAndDownForm">
-          #{text_field id: 'sellingState', label: '当前状态', value: s.state ,readonly: true /}
+            #{text_field id: 'sellingState', label: '当前状态', value: s.state ,readonly: true /}
           <input type="hidden" id="sellingId" value="${s.sellingId}">
           <a class="btn btn-primary" id="sellingUp" data-confirm="确认上架?">系统内上架</a>
           <a class="btn btn-danger" id="sellingDown" data-confirm="确认下架?">系统内下架</a>
