--- a/core/app/views/tags/tsp_show_template.html
+++ b/core/app/views/tags/tsp_show_template.html
@@ -1,4 +1,8 @@
 <script type="text/template" id="tsp-show-template">
+  <h3>Title</h3>
+
+  <p><%= tsp['title']%></p>
+
   <h3>Product Desc</h3>
 
   <p><%= tsp['p'][0] %></p>
