--- a/core/app/views/Sellings/_saleAmazon.html
+++ b/core/app/views/Sellings/_saleAmazon.html
@@ -67,7 +67,7 @@
       #{text_field id:'searchTerms3', name: 's.aps.searchTermss[2]', label: '', value: ''/}
       #{text_field id:'searchTerms4', name: 's.aps.searchTermss[3]', label: '', value: ''/}
       #{text_field id:'searchTerms5', name: 's.aps.searchTermss[4]', label: '', value: ''/}
-      #{textarea_field id:'productDesc', name: 's.aps.productDesc', rows: 10, label: '产品详细描述1', value: '' /}
+      #{textarea_field id:'productDesc', name: 's.aps.productDesc', rows: 10, label: '产品详细描述', value: '' /}
   </div>
   <div class="offset1 span9" id="previewDesc"></div>
 #{/form}
