--- a/core/app/views/CategoryInfos/categoryassign.html
+++ b/core/app/views/CategoryInfos/categoryassign.html
@@ -1,7 +1,7 @@
 #{extends 'main.html'/}
 #{set title:'部门品线负责人管理'/}
 #{set 'moreScripts'}
-    #{script 'categoryinfos/categoryassign.coffee'/}
+    #{script_cdn name: 'categoryinfos/categoryassign.coffee'/}
 #{/set}
 
 #{flash_alert /}
