--- a/core/app/views/Deliveryments/manual.html
+++ b/core/app/views/Deliveryments/manual.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'新增手动单' /}
 #{set 'moreScripts'}
-    #{script 'deliveryments/manual.coffee'/}
+    #{script_cdn name: 'deliveryments/manual.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert/}
