--- a/core/app/views/Payments/pdf.html
+++ b/core/app/views/Payments/pdf.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>${payment.paymentNumber} 付款单</title>
-#{stylesheet 'bootstrap.min.css'/}
+#{stylesheet_cdn name:'bootstrap.min.css'/}
   <style type="text/css">
     body{
       font-family:STXihei, serif;
