--- a/core/app/views/ProcureUnits/editManualProcureUnit.html
+++ b/core/app/views/ProcureUnits/editManualProcureUnit.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'手动单采购计划'/}
 #{set 'moreScripts'}
-    #{script 'procureunits/blank.coffee'/}
+    #{script_cdn name: 'procureunits/blank.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert/}
