--- a/core/app/views/Products/index.html
+++ b/core/app/views/Products/index.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html' /}
 #{set title:'Product' /}
 #{set 'moreScripts'}
-    #{script 'component/pagination.coffee'/}
-    #{script 'products/copysku.coffee'/}
+    #{script_cdn name: 'component/pagination.coffee'/}
+    #{script_cdn name: 'products/copysku.coffee'/}
 #{/set}
 
 <div style="margin:5px 0 0;" class="row">
