--- a/core/app/views/Products/saleAmazon.html
+++ b/core/app/views/Products/saleAmazon.html
@@ -1,10 +1,10 @@
 #{extends 'main_full.html'/}
 #{set 'moreStyles'}
-    #{stylesheet 'market.css'/}
+    #{stylesheet_cdn name:'market.css'/}
 #{/set}
 #{set 'moreScripts'}
-    #{script 'component/amazon.coffee'/}
-    #{script 'products/saleAmazon.coffee'/}
+    #{script_cdn name: 'component/amazon.coffee'/}
+    #{script_cdn name: 'products/saleAmazon.coffee'/}
 #{/set}
 <div id='check_modal' class="modal hide fade">
   <div class="modal-header">
