--- a/core/app/views/SaleTargets/show.html
+++ b/core/app/views/SaleTargets/show.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:"年度销售目标#" + yearSt.id /}
 #{set 'moreScripts'}
-    #{script 'saleTargets/blank.coffee'/}
+    #{script_cdn name: 'saleTargets/blank.coffee'/}
 #{/set}
 
 #{errorMsgs /}
