--- a/core/app/views/Whouses/blank.html
+++ b/core/app/views/Whouses/blank.html
@@ -1,7 +1,7 @@
 #{extends 'main.html'/}
 #{set title:'添加仓库'/}
 #{set 'moreScripts'}
-    #{script 'whouse/blank.coffee'/}
+    #{script_cdn name: 'whouse/blank.coffee'/}
 #{/set}
 
 #{errorMsgs /}
