--- a/core/app/views/Whouses/forwards.html
+++ b/core/app/views/Whouses/forwards.html
@@ -1,7 +1,7 @@
 #{extends 'main.html'/}
 #{set title:'Whouse(' + whs.size() + ')'/}
 #{set 'moreScripts'}
-    #{script 'component/pagination.coffee'/}
+    #{script_cdn name: 'component/pagination.coffee'/}
 #{/set}
 
 #{flash_alert /}
