--- a/core/app/views/main_full.html
+++ b/core/app/views/main_full.html
@@ -13,30 +13,31 @@
       window.PLAY_MODE = "PROD";
       #{/else}
   </script>
-#{stylesheet 'bootstrap.min.css'/}
-#{stylesheet 'bootstrapSwitch.css'/}
-#{stylesheet 'font-awesome.css'/}
-#{stylesheet 'jquery.loadmask.css'/}
-#{stylesheet 'main.css'/}
-#{stylesheet 'dateinput.css'/}
+#{stylesheet_cdn name:'bootstrap.min.css'/}
+#{stylesheet_cdn name:'bootstrapSwitch.css'/}
+#{stylesheet_cdn name:'font-awesome.css'/}
+#{stylesheet_cdn name:'jquery.loadmask.css'/}
+#{stylesheet_cdn name:'main.css'/}
+#{stylesheet_cdn name:'dateinput.css'/}
 #{get 'moreStyles' /}
-#{script 'jquery.1.7.2.min.js'/}
-#{script 'underscore-min.js'/}
-#{script 'noty/jquery.noty.js'/}
-#{script 'noty/themes/default.js'/}
-#{script 'noty/layouts/top.js'/}
-#{script 'noty/layouts/topCenter.js'/}
-#{script 'rails.js'/}
-#{script 'jquery.animate-colors-min.js'/}
-#{script 'bootstrap.min.js'/}
-#{script 'bootstrapSwitch.js'/}
-#{script 'jquery.loadmask.min.js'/}
-#{script 'jquery.highlight.js'/}
-#{script 'jquery.form.js'/}
-#{script 'jquery.tools.date.min.js'/}
-#{script 'component/notify.coffee'/}
-#{script 'component/popover.coffee'/}
-#{script 'main.js'/}
+
+#{script_cdn name:'jquery.1.7.2.min.js'/}
+#{script_cdn name:'underscore-min.js'/}
+#{script_cdn name: 'noty/jquery.noty.js'/}
+#{script_cdn name: 'noty/themes/default.js'/}
+#{script_cdn name: 'noty/layouts/top.js'/}
+#{script_cdn name: 'noty/layouts/topCenter.js'/}
+#{script_cdn name: 'rails.js'/}
+#{script_cdn name: 'jquery.animate-colors-min.js'/}
+#{script_cdn name: 'bootstrap.min.js'/}
+#{script_cdn name: 'bootstrapSwitch.js'/}
+#{script_cdn name: 'jquery.loadmask.min.js'/}
+#{script_cdn name: 'jquery.highlight.js'/}
+#{script_cdn name: 'jquery.form.js'/}
+#{script_cdn name: 'jquery.tools.date.min.js'/}
+#{script_cdn name: 'component/notify.coffee'/}
+#{script_cdn name: 'component/popover.coffee'/}
+#{script_cdn name: 'main.js'/}
 #{get 'moreScripts' /}
 </head>
 <body style="padding-top: 40px;">
