--- a/core/app/views/Activitis/index.html
+++ b/core/app/views/Activitis/index.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:'待处理流程' /}
 #{set 'moreScripts'}
-    #{script 'activitis/index.coffee'/}
+    #{script_cdn name: 'activitis/index.coffee'/}
 #{/set}
 
 <ul class="nav nav-tabs" id="below_tab">
