--- a/core/app/views/AmazonOperations/index.html
+++ b/core/app/views/AmazonOperations/index.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:'AmazonReview Click Page'/}
 #{set 'moreScripts'}
-    #{script 'amazonoperations/index.coffee'/}
+    #{script_cdn name: 'amazonoperations/index.coffee'/}
 #{/set}
 
 <div class="row-fluid">
