--- a/core/app/views/AnalyzeSkus/skuMonthlyDailySalesReports.html
+++ b/core/app/views/AnalyzeSkus/skuMonthlyDailySalesReports.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:'SKU 月度日均销量报表'/}
 #{set 'moreScripts'}
-    #{script 'analyzeskus/skuMonthlyDailySalesReports.coffee'/}
+    #{script_cdn name: 'analyzeskus/skuMonthlyDailySalesReports.coffee'/}
 #{/set}
 
 <div class="row-fluid" style="margin-top:15px">
