--- a/core/app/views/Analyzes/pie.html
+++ b/core/app/views/Analyzes/pie.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-#{script 'jquery.1.7.2.min.js'/}
-#{script 'highstock.js'/}
+#{script_cdn name: 'jquery.1.7.2.min.js'/}
+#{script_cdn name: 'highstock.js'/}
   <script type="text/javascript" src="/public/javascripts/main.js"></script>
 </head>
 </html>
