--- a/core/app/views/Applys/procures.html
+++ b/core/app/views/Applys/procures.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:"请款单列表" /}
 #{set 'moreScripts'}
-    #{script 'component/pagination.coffee'/}
+    #{script_cdn name: 'component/pagination.coffee'/}
 #{/set}
 
 
