--- a/core/app/views/CategoryInfos/show.html
+++ b/core/app/views/CategoryInfos/show.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html' /}
 #{set title:'Category 销售分析' /}
 #{set 'moreScripts'}
-    #{script 'jquery.dataTables.js'/}
-    #{script 'categoryinfos/categoryinfo.coffee'/}
+    #{script_cdn name: 'jquery.dataTables.js'/}
+    #{script_cdn name: 'categoryinfos/categoryinfo.coffee'/}
 #{/set}
 
 
