--- a/core/app/views/CheckTasks/_show.html
+++ b/core/app/views/CheckTasks/_show.html
@@ -1,10 +1,10 @@
-#{stylesheet 'bootstrap-datetimepicker.min.css'/}
-#{script 'bootstrap-datetimepicker.min.js'/}
-#{script 'jquery.filedrop.js' /}
-#{script 'component/dropUpload.coffee'/}
-#{script 'checktasks/show.coffee'/}
-#{script 'localResize.coffee'/} <!-- LocalResize Github 地址: https://github.com/think2011/localResizeIMG-2 --!>
-#{script 'localResize.ui.coffee'/}
+#{stylesheet_cdn name:'bootstrap-datetimepicker.min.css'/}
+#{script_cdn name: 'bootstrap-datetimepicker.min.js'/}
+#{script_cdn name: 'jquery.filedrop.js' /}
+#{script_cdn name: 'component/dropUpload.coffee'/}
+#{script_cdn name: 'checktasks/show.coffee'/}
+#{script_cdn name: 'localResize.coffee'/} <!-- LocalResize Github 地址: https://github.com/think2011/localResizeIMG-2 --!>
+#{script_cdn name: 'localResize.ui.coffee'/}
 
 <div class="row-fluid">
   <div>
