--- a/core/app/views/PaymentTargets/index.html
+++ b/core/app/views/PaymentTargets/index.html
@@ -3,7 +3,7 @@
 #{set 'moreStyles'}
 #{/set}
 #{set 'moreScripts'}
-    #{script 'paymentTargets/paymenttargets.coffee'/}
+    #{script_cdn name: 'paymentTargets/paymenttargets.coffee'/}
 #{/set}
 
 <div class="row-fluid">
