--- a/core/app/views/Products/blank.html
+++ b/core/app/views/Products/blank.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'创建新 Product' /}
 #{set 'moreScripts'}
-    #{script 'products/blank.coffee'/}
+    #{script_cdn name: 'products/blank.coffee'/}
 #{/set}
 
 <div class="row-fluid">
