--- a/core/app/views/SellingRecords/index.html
+++ b/core/app/views/SellingRecords/index.html
@@ -1,11 +1,11 @@
 #{extends 'main_full.html' /}
 #{set title:"销售财务分析"  /}
 #{set 'moreStyles'}
-    #{stylesheet 'payments.css'/}
+    #{stylesheet_cdn name:'payments.css'/}
 #{/set}
 #{set 'moreScripts'}
-    #{script 'sellingrecords/index.coffee'/}
-    #{script 'highstock.js'/}
+    #{script_cdn name: 'sellingrecords/index.coffee'/}
+    #{script_cdn name: 'highstock.js'/}
 #{/set}
 
 <div class="row-fluid" id='chartsDiv'>
