--- a/core/app/views/Sellings/selling.html
+++ b/core/app/views/Sellings/selling.html
@@ -1,11 +1,11 @@
 #{extends 'main_full.html'/}
 #{set title:s.sellingId/}
 #{set 'moreScripts'}
-    #{script 'component/amazon.coffee'/}
-    #{script 'sellings/selling.coffee'/}
+    #{script_cdn name: 'component/amazon.coffee'/}
+    #{script_cdn name: 'sellings/selling.coffee'/}
 #{/set}
 #{set 'moreStyles'}
-    #{stylesheet 'market.css'/}
+    #{stylesheet_cdn name: 'market.css'/}
 #{/set}
 #{if s.market.isAmazon()}
     #{flash_alert /}
