--- a/core/app/views/ShipmentReports/lossRateReport.html
+++ b/core/app/views/ShipmentReports/lossRateReport.html
@@ -1,8 +1,8 @@
 #{extends 'main_full.html' /}
 #{set title:'运输丢失率统计报表'/}
 #{set 'moreScripts'}
-    #{script 'jquery.dataTables.js'/}
-    #{script 'ShipmentReports/lossRate.coffee'/}
+    #{script_cdn name: 'jquery.dataTables.js'/}
+    #{script_cdn name: 'ShipmentReports/lossRate.coffee'/}
 #{/set}
 
 #{info_row}
