--- a/core/app/views/Skuchecks/checklist.html
+++ b/core/app/views/Skuchecks/checklist.html
@@ -1,7 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:"CHECKLIST列表 (${skulist.size()})" /}
 #{set 'moreScripts'}
-    #{script 'skuchecks/skulist.coffee'/}
+    #{script_cdn name: 'skuchecks/skulist.coffee'/}
 #{/set}
 
 #{info_row}
