增加卖家分析

--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -78,6 +78,7 @@
   <ul class="dropdown-menu">
     <li><a href="@{MarketAnalysis.channels()}">数据抓取任务</a></li>
     <li><a href="@{MarketAnalysis.tags()}">属性</a></li>
+    <li><a href="@{MarketAnalysis.reports()}">卖家分析</a></li>
   </ul>
 </li>
 #{/power.ck}
