--- a/core/app/views/Sellings/_saleAmazon.html
+++ b/core/app/views/Sellings/_saleAmazon.html
@@ -2,7 +2,7 @@
 #{form @Products.saleAmazonListing(), class: 'form-horizontal', id: 'saleAmazonForm'}
   <div class="span5">
       #{text_field id:'msku', name: 's.merchantSKU', readonly: true, label: 'Merchant SKU', value: product.sku/}
-      #{text_field id:'upc', name: 's.aps.upc', label: 'UPC', value: '' /}
+      #{text_field id:'upc', name: 's.aps.upc', label: 'UPC', value: product.upc, readonly: true /}
       #{text_field id:'manufacturer', name: 's.aps.manufacturer', label: 'Manufacturer', value: 'EasyAcc' /}
       #{text_field id:'brand', name: 's.aps.brand', label: '品牌', value: 'EasyAcc'/}
       #{text_field id:'standerPrice', name: 's.aps.standerPrice', label: '标准价格', value: '' /}
